--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ $ mvn wildfly-swarm:run
 ----
 
 == Interacting with the Booster Locally
-To interact with your booster while its running, use the form at `http://localhost:8080` or the `curl` command:
+To interact with the booster while its running, use the form at `http://localhost:8080` or the `curl` command:
 
 [source,bash,options="nowrap",subs="attributes+"]
 ----
